--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 /* font-family: "Inter", sans-serif; */
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Inter:wght@100..900&display=swap');
+
 /* font-family: "Great Vibes", cursive; */
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: "Inter", sans-serif;
+}
+
+/* Navbar section style */
