--- a/styles/style.css
+++ b/styles/style.css
@@ -68,7 +68,7 @@ ul li {
 
 /* Banner section style */
 .banner {
-    border: 2px solid red;
+    /* border: 2px solid red; */
     display: flex;
     justify-content: center;
     align-items: center;
