--- a/styles/style.css
+++ b/styles/style.css
@@ -29,14 +29,14 @@ header {
 
 .navbar-section-2 {
     margin-top: 3.6rem;
-    border: 1px solid;
-    padding: 5px;
-    border-radius: 50px;
-    border: 2px solid red;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    padding: 10px;
+    border-radius: 80px;
+    /* border: 2px solid red; */
 }
 
 .navbar-button {
-    padding: 10px 20px;
+    padding: 10px 25px;
     border-radius: 50px;
     border: none;
     color: white;
@@ -59,6 +59,10 @@ header {
 
 ul li {
     list-style: none;
+}
+
+ul li a {
+    text-decoration: none;
 }
 
 .navbar-option {
@@ -105,6 +109,10 @@ ul li {
     font-size: 1.1rem;
     font-weight: 600;
 }
+.banner-main-button{
+    display: flex;
+    gap: 10px;
+}
 
 .banner-button:hover {
     background-color: rgb(230, 83, 60);
@@ -112,11 +120,11 @@ ul li {
 }
 
 .banner-section-1 {
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 
 .banner-section-2 {
-    border: 2px solid red;
+    /* border: 2px solid red; */
     position: relative;
 }
 
@@ -138,7 +146,7 @@ ul li {
 }
 
 .main-box {
-    border: 2px solid red;
+    /* border: 2px solid red; */
     position: absolute;
     display: flex;
     justify-content: center;
@@ -149,17 +157,19 @@ ul li {
     padding: 15px;
     backdrop-filter: blur(20px);
     background: rgba(48, 48, 48, 0.54);
-    border-radius: 8px;
+    border-radius: 12px;
+    color: white;
 }
 
-.box-1-title{
+.box-1-title {
     font-size: 1.5rem;
     font-weight: 900;
 }
 
-.box-1-description{
+.box-1-description {
     font-size: 1rem;
     font-weight: 400;
+    color: rgba(239, 237, 232, 0.65);
 }
 
 .circle {
@@ -172,54 +182,77 @@ ul li {
 .box-2 {
     color: white;
     position: absolute;
-    bottom: 70%;
-    margin-left: 80%;
-    border: 2px solid red;
-    padding: 5%;
+    bottom: 60%;
+    margin-left: 60%;
+    /* border: 2px solid red; */
+    width: 55%;
+    padding: 3%;
+    backdrop-filter: blur(20px);
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 12px;
+}
+
+.box-2-title {
+    font-size: 2.5rem;
+    font-weight: 900;
+}
+
+.box-2-description {
+    color: rgba(239, 237, 232, 0.65);
+}
+
+.icon{
+    /* display: none; */
 }
 
 
-/* .box-1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-    border: 2px solid red;
-    border-radius: 5px;
-    width: 40%;
-    padding: 10px;
-    position: absolute;
-    width: 12.87rem;
-    height: 6rem;
-    left: 65.62rem;
-    top: 33.12rem;
-    backdrop-filter: blur(20px);
-    background: rgba(48, 48, 48, 0.54);
-    width: 10%;
-} */
-
-/* .tutorial {
-    color: white;
-} */
-
-/* .tutorial-video {
-    border: 2px solid red;
-    position: absolute;
-    margin: 0 auto;
-    width: 193px;
-    height: 98px;
-    left: 1380px;
-    top: 260px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;
-    backdrop-filter: blur(20px);
-    background: rgba(255, 255, 255, 0.1);
-    width: 10%;
-
-} */
-
 /* Small device responsive */
-@media screen and (max-width 576) {}
+@media screen and (max-width: 576px) {
+    body{
+        width: 100%;
+        /* margin: 0 auto; */
+    }
+    .navbar{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 0 auto;
+    }
+    ul li a{
+        display: none;
+    }
+
+    .navbar-section-2{
+        border: none;
+    }
+
+    .banner{
+        flex-direction: column;
+        margin: 0 auto;
+        border: none;
+        gap: 15px;
+        margin-top: 50px;
+    }
+
+    .banner-section-1{
+        justify-content: center;
+        align-items: center;
+    }
+    .banner-main-button{
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+    }
+    .banner-section-2{
+        /* text-align: center; */
+        margin: 0 auto;
+    }
+    .main-box{
+        margin: 0 auto;
+    }
+
+    .box-2{
+        margin-left: 55%;
+        margin-bottom: 20%;
+    }
+}
