--- a/styles/style.css
+++ b/styles/style.css
@@ -73,7 +73,7 @@ ul li a {
 
 /* Banner section style */
 .banner {
-    border: 2px solid red;
+    /* border: 2px solid red; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -109,7 +109,8 @@ ul li a {
     font-size: 1.1rem;
     font-weight: 600;
 }
-.banner-main-button{
+
+.banner-main-button {
     display: flex;
     gap: 10px;
 }
@@ -201,32 +202,38 @@ ul li a {
     color: rgba(239, 237, 232, 0.65);
 }
 
-.icon{
-    /* display: none; */
+.icon {
+    display: none;
 }
 
 
 /* Small device responsive */
 @media screen and (max-width: 576px) {
-    body{
+    body {
         width: 100%;
         /* margin: 0 auto; */
     }
-    .navbar{
+
+    .navbar {
         display: flex;
         justify-content: space-between;
         align-items: center;
         margin: 0 auto;
     }
-    ul li a{
+
+    ul li a {
         display: none;
     }
 
-    .navbar-section-2{
+    .icon {
+        display: block;
+    }
+
+    .navbar-section-2 {
         border: none;
     }
 
-    .banner{
+    .banner {
         flex-direction: column;
         margin: 0 auto;
         border: none;
@@ -234,25 +241,28 @@ ul li a {
         margin-top: 50px;
     }
 
-    .banner-section-1{
+    .banner-section-1 {
         justify-content: center;
         align-items: center;
     }
-    .banner-main-button{
+
+    .banner-main-button {
         justify-content: center;
         align-items: center;
         gap: 20px;
     }
-    .banner-section-2{
+
+    .banner-section-2 {
         /* text-align: center; */
         margin: 0 auto;
     }
-    .main-box{
+
+    .main-box {
         margin: 0 auto;
     }
 
-    .box-2{
-        margin-left: 55%;
+    .box-2 {
+        margin-left: 53%;
         margin-bottom: 20%;
     }
 }
