Rework on BMI section

--- a/styles/style.css
+++ b/styles/style.css
@@ -320,38 +320,36 @@ ul li a {
 }
 
 /* BMI section style here */
-
 .bmi-container {
     text-align: center;
     margin-top: 78px;
     margin-bottom: 88px;
+}
 
+.bmi-section {
+    background-color: #222222;
+    display: flex;
+    justify-content: center;
+    gap: 175px;
+    /* border: 2px solid red; */
+}
+
+.bmi-table {
+    /* border: 2px solid red; */
+}
+
+.bmi-table-title {
+    color: white;
+    font-size: 1.75rem;
+    font-weight: 900;
+    margin-top: 52px;
+    margin-bottom: 52px;
 }
 
 .bmi-title {
     color: white;
     font-size: 48px;
-}
-
-.bmi-description {
-    color: #FFFFFF80;
-    font-size: 14px;
-}
-
-table,
-th,
-td {
-    border: 2px solid #FFFFFF1A;
-    border-collapse: collapse;
-    padding: 20px;
-}
-
-.bmi-table {
-    color: white;
-    font-size: 28px;
     font-weight: 900;
-    margin-top: 52px;
-    margin-bottom: 52px;
 }
 
 .table-title {
@@ -366,7 +364,25 @@ td {
     font-weight: 400;
 }
 
-.bmi-calculator-title{
+.bmi-description {
+    color: #FFFFFF80;
+    font-size: 14px;
+}
+
+table,
+th,
+td {
+    border: 2px solid #FFFFFF1A;
+    border-collapse: collapse;
+    padding: 10px;
+}
+
+
+.bmi-calculator {
+    /* border: 2px solid red; */
+}
+
+.bmi-calculator-title {
     color: #FFFFFF;
     font-size: 28px;
     font-weight: 900;
@@ -374,67 +390,50 @@ td {
     margin-bottom: 14px;
 }
 
-.bmi-calculator-description{
+.bmi-calculator-description {
     color: #FFFFFF80;
     font-size: 14px;
     font-weight: 400;
     margin-bottom: 34px;
 }
-input{
-    padding: 12px 40px;
+
+.bmi-calculator-input {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 12px;
+}
+
+.second-select {
+    grid-column: span 2;
+}
+
+.bmi-calculator-input>* {
+    padding: 12px 40px 12px 20px;
     background-color: #FFFFFF1A;
-    /* border: 2px solid red; */
     border: none;
     border-radius: 8px;
 }
 
-input::placeholder{
+input::placeholder {
     color: #FFFFFF99;
+    font-size: 1rem;
+    font-weight: 400;
 }
 
 select {
-    width: 253px;
-    padding: 12px 40px;
-    background-color: #FFFFFF1A;
-    /* border: 2px solid red; */
-    border: none;
-    border-radius: 8px;
     color: #FFFFFF99;
-    
+    font-size: 1rem;
 }
 
-.second-input{
-    margin-top: 12px;
-    margin-bottom: 12px;
-    
-}
-.last-select{
-    width: 511px;
-    background-color: #FFFFFF1A;
-    color: #FFFFFF99;
-    margin-bottom: 34px;
-}
-
-
-.bmi-section{
-    background-color: #222222;
-    display: flex;
-    justify-content: center;
-    /* align-items: center; */
-    margin: 0 auto;
-    gap: 175px;
-}
-
-.calculate-button{
+.calculate-bmi-button {
     padding: 16px 40px 16px 40px;
+    margin-top: 34px;
     border-radius: 42px;
-    background: rgb(230, 83, 60);
     border: none;
-    color: white;
-    font-size: 18px;
-    font-weight: 600;
+    background-color: #E6533C;
+    color: #FFFFFF;
+    margin-bottom: 52px;
 }
-
 
 /* Small device responsive */
 @media screen and (max-width: 576px) {
