--- a/styles/style.css
+++ b/styles/style.css
@@ -515,11 +515,13 @@ select {
 /* Membership section style */
 
 .membership-card{
-    border: 2px solid red;
+    /* border: 2px solid red; */
     height: 350px;
-    width: 250px;
+    /* width: 250px; */
     background-color: #FFFFFF1A;
     padding: 20px;
+    border-radius: 8px;
+    box-shadow: 2px 2px 4px #FFFFFF1A ;
 }
 .pakage-title{
     text-align: center;
@@ -538,11 +540,21 @@ select {
 
 .purchase{
     text-align: center;
-    margin-top: 100px;
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .membership-offers{
-    display: ;
+    width: 50%;
+    /* border: 2px solid red; */
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    margin: 0 auto;
+    padding: 20px;
+    gap: 20px;
+
 }
 
 
