--- a/styles/style.css
+++ b/styles/style.css
@@ -559,9 +559,13 @@ select {
 
 
 /* Information section style here */
+
+footer{
+    background-color: #FFFFFF1A;
+}
 .fitness-section{
     /* border: 2px solid red; */
-    background-color: #FFFFFF1A;
+    /* background-color: #FFFFFF1A; */
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -596,6 +600,15 @@ select {
 
 .fitness-margin{
     margin-bottom: 79px;
+}
+.footer-name{
+    text-align: center;
+    margin-top: 36px;
+}
+
+.copy-right{
+    font-size: 20px;
+    color: #FFFFFF80;
 }
 
 /* Small device responsive */
