--- a/styles/style.css
+++ b/styles/style.css
@@ -772,4 +772,13 @@ footer{
     .bmi-calculator-input>* {
         padding: 8px;
     }
+
+    /* Meet our team responsive */
+    .trainer-image-card{
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+        padding: 10px;
+    }
 }
