Membership offer responsive

--- a/styles/style.css
+++ b/styles/style.css
@@ -515,9 +515,7 @@ select {
 /* Membership section style */
 
 .membership-card{
-    /* border: 2px solid red; */
     height: 350px;
-    /* width: 250px; */
     background-color: #FFFFFF1A;
     padding: 20px;
     border-radius: 8px;
@@ -576,6 +574,9 @@ footer{
     font-size: 70px;
     font-weight: 800;
     margin-top: 66px;
+    text-align: center;
+    background-color: #FFFFFF1A;
+    text-shadow: 2px 2px 4px black;
 }
 
 .fitness-description{
@@ -780,5 +781,21 @@ footer{
         flex-direction: column;
         margin: 0 auto;
         padding: 10px;
+    }
+
+    /* Membership offer responsive */
+    .membership-offers{
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+        margin: 0;
+    }
+
+    .membership-card{
+        width: 100%;
+    }
+
+    .fitness{
+        font-size: 50px;
     }
 }
