--- a/styles/style.css
+++ b/styles/style.css
@@ -536,6 +536,8 @@ select {
     padding: 16px 45px 16px 45px;
     border-radius: 16px;
     border: none;
+    background-color: #E6533C;
+    color: white;
 }
 
 .purchase {
@@ -622,6 +624,8 @@ footer {
     font-size: 20px;
     color: #FFFFFF80;
 }
+
+
 
 /* Small device responsive */
 @media screen and (max-width: 576px) {
@@ -729,6 +733,8 @@ footer {
 
     .run-section-1 {
         margin-top: 20px;
+        margin-left: 20px;
+        margin-right: 20px;
     }
 
     .join-now-button {
@@ -786,6 +792,12 @@ footer {
     }
 
     /* Meet our team responsive */
+
+    .meet-out-team {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
     .trainer-image-card {
         width: 90%;
         display: flex;
